fix margins in main header to be responsive on mobile

--- a/src/Sections/HomeSection.module.scss
+++ b/src/Sections/HomeSection.module.scss
@@ -4,12 +4,16 @@
 	min-height: 100vh;
 	padding-top: 5rem;
 	text-align: center;
-	margin-inline: 20rem;
+	margin-inline: 5rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
 	gap: 5rem;
+
+	@media (min-width: 1000px) {
+		margin-inline: 15rem;
+	}
 }
 
 .name {
